codebase/kube/scripts/01-whoami-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: jwilder/whoami:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
